fix: 같은 이름의 아이템이 들어온 경우 통합